--- a/estilos.css
+++ b/estilos.css
@@ -28,14 +28,13 @@
   width: 100%;
   background-color: #e48f65;
   font-family: "Roboto Cn", sans-serif;
-}
-
-.header--logo {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5rem 10%;
+  padding: 0.5rem 7%;
   text-transform: uppercase;
+  position: fixed;
+  z-index: 5;
 }
 
 .logo {
@@ -79,23 +78,11 @@
   transform-origin: left;
 }
 
-.carrito {
-  font-size: 30px;
-  padding: 10px;
-  border: 2px dashed black;
-  border-radius: 50%;
-  transform: translateY(-100rem);
-  animation: slideIn 1s forwards;
-  background-color: #ec9c75;
-}
-
 .header--nav {
   display: flex;
-  background-color: #ec9c75;
   align-items: center;
   justify-content: center;
   padding: 2rem 2%;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   font-weight: bold;
 }
 .header--nav li a {
@@ -110,25 +97,19 @@
   color: #fff;
 }
 
-.nav--visible {
-  display: flex;
-}
-.nav--visible li {
+.nav--animaciones li {
   list-style: none;
-  transform: translateX(-100rem);
+  transform: translateX(100rem);
   animation: slideIn 0.5s forwards;
 }
-.nav--visible li:nth-child(1) {
+.nav--animaciones li:nth-child(1) {
   animation-delay: 0s;
 }
-.nav--visible li:nth-child(2) {
+.nav--animaciones li:nth-child(2) {
   animation-delay: 0.5s;
 }
-.nav--visible li:nth-child(3) {
+.nav--animaciones li:nth-child(3) {
   animation-delay: 1s;
-}
-.nav--visible li:nth-child(4) {
-  animation-delay: 1.5s;
 }
 
 .main {
@@ -147,7 +128,7 @@
   padding: 10px;
   border: 2px solid black;
   border-radius: 50%;
-  background-color: #ec9c75;
+  background-color: #e48f65;
   transform: translateX(100rem);
   animation: slideIn 1s forwards;
 }
@@ -290,6 +271,11 @@
   width: 200px;
   margin-bottom: 0.5rem;
 }
+.producto--ind img:hover {
+  filter: brightness(108%);
+  transform: translateY(-0.313rem) scale(1.01);
+  transition: all 0.5s;
+}
 .producto--ind h3 {
   color: black;
   font-size: 2.5rem;
@@ -333,7 +319,7 @@
   grid-template-rows: 1fr;
   gap: 0px;
   grid-auto-flow: row;
-  grid-template-areas: "galeria--img1 galeria--p1" "galeria--p2 galeria--img2";
+  grid-template-areas: "galeria--img1 galeria--p1";
 }
 
 .galeria--img1 {
@@ -344,7 +330,7 @@
   width: 100%;
   height: 100%;
   border: 0.125rem solid white;
-  filter: brightness(75%);
+  filter: brightness(90%);
 }
 .galeria--img1 img:hover {
   filter: brightness(100%);
@@ -428,7 +414,7 @@
 .copyright {
   margin-top: 15px;
   text-align: center;
-  font-size: 20pxpx;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
