--- a/estilos.scss
+++ b/estilos.scss
@@ -44,14 +44,13 @@ $font2: 'Courier New', Courier, monospace;
     width: 100%;
     background-color: $color1;
     font-family: $font1;
-}
-
-.header--logo{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 10%;
+    padding: 0.5rem 7%;
     text-transform: uppercase;
+    position: fixed;
+    z-index: 5;
 }
 
 .logo{display: flex;}
@@ -95,25 +94,13 @@ $font2: 'Courier New', Courier, monospace;
     }
 }
 
-.carrito{
-    font-size: 30px;
-    padding: 10px;
-    border: 2px dashed black;
-    border-radius: 50%;
-    transform: translateY(-100rem);
-    animation: slideIn 1s forwards;
-    background-color: $color6;
-}
-
 // NAVBAR
 
 .header--nav{
     display: flex;
-    background-color: $color6;
     align-items: center;
     justify-content: center;
     padding: 2rem 2%;
-    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 10%);
     font-weight: bold;
     li a{
         position: relative;
@@ -128,16 +115,14 @@ $font2: 'Courier New', Courier, monospace;
     }
 }
 
-.nav--visible{
-    display: flex;
+.nav--animaciones{
     li{
         list-style: none;
-        transform: translateX(-100rem);
+        transform: translateX(100rem);
         animation: slideIn .5s forwards;
         &:nth-child(1){animation-delay: 0s;}
         &:nth-child(2){animation-delay: .5s;}
         &:nth-child(3){animation-delay: 1s;}
-        &:nth-child(4){animation-delay: 1.5s;}
     }
 }
 
@@ -161,7 +146,7 @@ $font2: 'Courier New', Courier, monospace;
     padding: 10px;
     border: 2px solid black;
     border-radius: 50%;
-    background-color: $color6;
+    background-color: $color1;
     transform: translateX(100rem);
     animation: slideIn 1s forwards;
     &:hover{
@@ -311,6 +296,11 @@ $font2: 'Courier New', Courier, monospace;
         height: 200px;
         width: 200px;
         margin-bottom: 0.5rem;
+        &:hover{
+            filter: brightness(108%);
+            transform: translateY(-0.313rem) scale(1.01);
+            transition: all 0.5s;
+        }
     }
     h3{
         color: black;
@@ -359,8 +349,7 @@ $font2: 'Courier New', Courier, monospace;
     gap: 0px;
     grid-auto-flow: row;
     grid-template-areas:
-    "galeria--img1 galeria--p1"
-    "galeria--p2 galeria--img2";
+    "galeria--img1 galeria--p1";
 }
 
 .galeria--img1 { 
@@ -370,7 +359,7 @@ $font2: 'Courier New', Courier, monospace;
         width: 100%;
         height: 100%;
         border: 0.125rem solid white;
-        filter: brightness(75%);
+        filter: brightness(90%);
         &:hover{
             filter: brightness(100%);
             transition: all 0.5s ease-in-out;
@@ -454,7 +443,7 @@ $font2: 'Courier New', Courier, monospace;
 .copyright{
     margin-top: 15px;
     text-align: center;
-    font-size: 20pxpx;
+    font-size: 1.2rem;
     font-weight: bold;
 }
 
