--- a/estilos.css
+++ b/estilos.css
@@ -6,8 +6,8 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box !important;
-  color: #000 !important;
+  box-sizing: border-box;
+  color: #000;
 }
 * a {
   text-decoration: none !important;
@@ -54,7 +54,7 @@
   animation: slideIn 1s forwards;
 }
 .nombre span {
-  color: #8f4646 !important;
+  color: #8f4646;
 }
 .nombre:hover::before, .nombre:hover::after {
   transform: scaleX(1);
@@ -102,6 +102,7 @@
   margin: 0;
 }
 .header--nav li a {
+  color: black;
   position: relative;
   letter-spacing: 0.125rem;
   padding: 0.5rem 1.5rem;
@@ -110,7 +111,7 @@
 }
 .header--nav li a:hover {
   background: #8f4646;
-  color: #fff !important;
+  color: white;
 }
 
 .nav--animaciones li {
@@ -167,7 +168,7 @@
 }
 .banner--descripcion p {
   margin: 2rem 0 3rem 0;
-  color: white !important;
+  color: white;
   font-size: 1.2rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -177,7 +178,7 @@
   padding: 0.6rem 3.5rem;
   margin: auto;
   opacity: 0.85 !important;
-  color: white !important;
+  color: white;
   border-radius: 50px;
   font-size: 0.9rem;
   font-weight: bold;
@@ -185,7 +186,7 @@
 }
 .banner--descripcion a:hover {
   background: white;
-  color: black !important;
+  color: black;
   opacity: 1;
   box-shadow: 0rem 0.313rem 0.625rem 0.125rem rgba(0, 0, 0, 0.9);
 }
@@ -194,7 +195,7 @@
   font-style: italic;
   font-weight: bold;
   text-transform: uppercase;
-  color: white !important;
+  color: white;
 }
 
 .tarjetas--contenedor {
@@ -263,7 +264,7 @@
   padding: 1rem;
 }
 .productos--titulo span {
-  color: #4a7584 !important;
+  color: #4a7584;
 }
 
 .producto--ind {
@@ -295,24 +296,24 @@
   align-items: center;
   justify-content: center;
   margin-top: 1rem;
-  background: #ecdcbe !important;
-  color: #8f4646 !important;
+  background: #ecdcbe;
+  color: #8f4646;
   padding: 1rem;
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
   cursor: pointer;
   border-radius: 0.5rem;
-  border-color: #ecdcbe !important;
-  outline: 2px solid #ecdcbe !important;
+  border-color: #ecdcbe;
+  outline: 2px solid #ecdcbe;
   outline-offset: 2px;
   transition: all 0.5s;
 }
 .producto--ind button:hover {
-  background-color: #8f4646 !important;
-  border-color: #8f4646 !important;
-  color: #ecdcbe !important;
-  outline: black !important;
+  background-color: #8f4646;
+  border-color: #8f4646;
+  color: #ecdcbe;
+  outline: black;
 }
 
 .producto--precios {
@@ -380,7 +381,7 @@
   border: 0.125rem solid white;
 }
 .galeria--p1 h3 {
-  color: white !important;
+  color: white;
   font-size: 3rem;
   text-align: center;
   text-decoration: underline;
@@ -388,7 +389,7 @@
   margin-bottom: 1rem;
 }
 .galeria--p1 p {
-  color: white !important;
+  color: white;
   font-size: 1.5rem;
   line-height: 2.5rem;
 }
@@ -404,7 +405,7 @@
 .social {
   text-align: center;
   padding-bottom: 25px;
-  color: #4b4c4d !important;
+  color: #4b4c4d;
 }
 .social a {
   font-size: 24px;
@@ -516,7 +517,7 @@
   }
   .header--nav li a {
     font-size: 1.2rem;
-    color: #8f4646 !important;
+    color: #8f4646;
   }
 
   #menu:checked ~ ul {
