--- a/estilos.scss
+++ b/estilos.scss
@@ -22,8 +22,8 @@ $font2: 'Courier New', Courier, monospace;
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box !important;
-    color: #000 !important;
+    box-sizing: border-box;
+    color: #000;
     a{
         text-decoration: none !important;
     }
@@ -71,7 +71,7 @@ $font2: 'Courier New', Courier, monospace;
     transform: translateY(-100rem);
     animation: slideIn 1s forwards;
     span{
-        color: $color4 !important;
+        color: $color4;
     }
     &:hover{
         &::before, &::after{
@@ -123,6 +123,7 @@ $font2: 'Courier New', Courier, monospace;
     font-weight: bold;
     margin: 0;
     li a{
+        color: black;
         position: relative;
         letter-spacing: 0.125rem;
         padding: 0.5rem 1.5rem;
@@ -130,7 +131,7 @@ $font2: 'Courier New', Courier, monospace;
         transition: all .4s;
         &:hover{
             background: $color4;
-            color: #fff !important;
+            color: white;
         }
     }
 }
@@ -190,7 +191,7 @@ $font2: 'Courier New', Courier, monospace;
     margin: auto;
     p{
         margin: 2rem 0 3rem 0;
-        color: white !important;
+        color: white;
         font-size: 1.2rem;
         font-weight: bold;
         text-transform: uppercase;
@@ -200,14 +201,14 @@ $font2: 'Courier New', Courier, monospace;
         padding: 0.6rem 3.5rem;
         margin: auto;
         opacity: 0.85 !important;
-        color: white !important;
+        color: white;
         border-radius: 50px;
         font-size: 0.9rem;
         font-weight: bold;
         transform: all 1s ease-out;
         &:hover{
             background: white;
-            color: black !important;
+            color: black;
             opacity: 1;
             box-shadow: 0rem 0.313rem 0.625rem 0.125rem rgba(0, 0, 0, 0.9);
         }
@@ -217,7 +218,7 @@ $font2: 'Courier New', Courier, monospace;
         font-style: italic;
         font-weight: bold;
         text-transform: uppercase;
-        color: white !important;
+        color: white;
     }
 }
 
@@ -292,7 +293,7 @@ $font2: 'Courier New', Courier, monospace;
     font-size: 5rem;
     padding: 1rem;
     span{
-        color: $color5 !important;
+        color: $color5;
     }
 }
 
@@ -324,23 +325,23 @@ $font2: 'Courier New', Courier, monospace;
         align-items: center;
         justify-content: center;
         margin-top: 1rem;
-        background: $color3 !important;
-        color: $color4 !important;
+        background: $color3;
+        color: $color4;
         padding: 1rem;
         font-size: 1.5rem;
         font-weight: bold;
         text-align: center;
         cursor: pointer;
         border-radius: 0.5rem;
-        border-color: $color3 !important;
-        outline: 2px solid $color3 !important;
+        border-color: $color3;
+        outline: 2px solid $color3;
         outline-offset: 2px;
         transition: all .5s;
         &:hover{
-            background-color: $color4 !important;
-            border-color: $color4 !important; 
-            color: $color3 !important;
-            outline: black !important;
+            background-color: $color4;
+            border-color: $color4; 
+            color: $color3;
+            outline: black;
         }
     }
 }
@@ -414,7 +415,7 @@ $font2: 'Courier New', Courier, monospace;
     padding: 5rem;
     border: 0.125rem solid white;
     h3{
-        color: white !important;
+        color: white;
         font-size: 3rem;
         text-align: center;
         text-decoration: underline;
@@ -422,7 +423,7 @@ $font2: 'Courier New', Courier, monospace;
         margin-bottom: 1rem;
     }
     p{
-        color: white !important;
+        color: white;
         font-size: 1.5rem;
         line-height: 2.5rem;
     }
@@ -441,7 +442,7 @@ $font2: 'Courier New', Courier, monospace;
 .social{
     text-align: center;
     padding-bottom: 25px;
-    color: #4b4c4d !important;
+    color: #4b4c4d;
     a{
         font-size: 24px;
         color: inherit !important;
@@ -549,7 +550,7 @@ $font2: 'Courier New', Courier, monospace;
             display: block;
             a{
                 font-size: 1.2rem;
-                color: $color4 !important;
+                color: $color4;
             }
         }
     }
